[project]
name = "itinerary-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "yunahya",email = "yunah.kimya@i-esg.io"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "chainlit (>=2.5.5,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "openai (>=1.77.0,<2.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
